[package]
name = "blockchain"
version = "0.1.0"
authors = ["Sebas Arriola <sebdeveloper6952@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1.38"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
sha2 = "0.9.1"